# hugo-utils

./: .appveyor.yml  .gitignore  .mypy.ini  .travis.yml  README.md  download_hugo.py  expire_date.py  freeze_date.py  gen_tag_index.py  jekyll2hugo.py  longest_filename.py  longest_title.py  most_headers.py  orphan_categories.py  orphan_tags.py  pyproject.toml  setup.cfg  vader-scan.py
.github/workflows/: ci.yml
hugoutils/: __init__.py  header.py
hugoutils/tests/: 2018-02-14-hi-there.md  2018-03-11-internal-date.md  test_jekyll.py
src/hugomd/: __init__.py  header.py
src/hugomd/jekyll2hugo/: __init__.py
src/hugomd/tests/: test_jekyll.py
src/hugoutils/: __main__.py  header.py
src/hugoutils/jekyll2hugo/: __init__.py
src/hugoutils/tests/: conftest.py  test_jekyll.py
tests/: 2018-02-14-hi-there.md  2018-03-11-internal-date.md  test_jekyll.py
