[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hugomd"
description = "manage go Hugo website markdown"
keywords = ["hugo"]
classifiers = ["Development Status :: 5 - Production/Stable",
 "Environment :: Console",
 "Operating System :: OS Independent",
 "Programming Language :: Python :: 3",
 "Topic :: Internet :: WWW/HTTP :: Site Management"
]
requires-python = ">=3.7"
dynamic = ["version", "readme"]
dependencies = ["pyyaml"]


[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "hugomd.__version__"}

[project.optional-dependencies]
tests = ["pytest"]
lint = ["flake8", "flake8-bugbear", "flake8-builtins", "flake8-blind-except", "mypy",
  "types-PyYAML"]
full = ["pandas", "openpyxl"]

[tool.black]
line-length = 100

[tool.mypy]
files = ["src", "*.py"]

ignore_missing_imports = true
strict_optional = false
show_column_numbers = true
allow_redefinition = true
