[metadata]
name = hugoutils
version = 1.0.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Utilities for converting websites to Hugo
url = https://github.com/scivision/hugo-utils
keywords =
  hugo
  jekyll
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: End Users/Desktop
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 38.6
  pip >= 10
packages = find:
scripts =
  jekyll2hugo.py
install_requires =

[options.extras_require]
tests =
  pytest
cov =
  pytest-cov
  coveralls
  flake8
  mypy

[options.entry_points]
console_scripts =
