[metadata]
name = hugoutils
version = 1.2.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Utilities for converting websites to Hugo
url = https://github.com/scivision/hugo-utils
keywords =
  hugo
  jekyll
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: End Users/Desktop
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
license_files =
  LICENSE.txt

[options]
python_requires = >= 3.6
packages = find:
install_requires =
  pyyaml
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy

[options.entry_points]
console_scripts =
  jekyll2hugo = hugoutils.__main__:cli
